[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu/Scripts/menuMain.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/Scenes/menuFind.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainMenu/Scenes/menuMake.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu/Scenes/menuOpts.tscn" type="PackedScene" id=4]

[node name="menuMain" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Main" type="MarginContainer" parent="."]
anchor_left = -0.055
anchor_right = -0.055
margin_left = 120.32
margin_top = 64.0
margin_right = 1016.32
margin_bottom = 512.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBox" type="VBoxContainer" parent="Main"]
margin_left = 378.0
margin_right = 518.0
margin_bottom = 448.0
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="Main/VBox"]
margin_top = 104.0
margin_right = 140.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Game of the Generals"
align = 1

[node name="Buttons" type="MarginContainer" parent="Main/VBox"]
margin_left = 18.0
margin_top = 226.0
margin_right = 121.0
margin_bottom = 448.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Main/VBox/Buttons"]
margin_right = 103.0
margin_bottom = 222.0
size_flags_horizontal = 5
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Find" type="Button" parent="Main/VBox/Buttons/VBox"]
margin_right = 103.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../Quit")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Find a Match"

[node name="Make" type="Button" parent="Main/VBox/Buttons/VBox"]
margin_top = 60.0
margin_right = 103.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Custom Game"

[node name="Opts" type="Button" parent="Main/VBox/Buttons/VBox"]
margin_top = 121.0
margin_right = 103.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="Quit" type="Button" parent="Main/VBox/Buttons/VBox"]
margin_top = 181.0
margin_right = 103.0
margin_bottom = 222.0
focus_neighbour_bottom = NodePath("../Find")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="Find" parent="." instance=ExtResource( 2 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Make" parent="." instance=ExtResource( 3 )]
margin_left = -1024.0
margin_right = -1024.0

[node name="Host" parent="Make/VBox/Panels" index="0"]
__meta__ = {
"_edit_lock_": true
}

[node name="Opts" parent="." instance=ExtResource( 4 )]
margin_left = 1024.0
margin_right = 2048.0

[connection signal="resized" from="." to="." method="_on_menuMain_resized"]
[connection signal="pressed" from="Main/VBox/Buttons/VBox/Find" to="." method="_on_Find_pressed"]
[connection signal="pressed" from="Main/VBox/Buttons/VBox/Make" to="." method="_on_Make_pressed"]
[connection signal="pressed" from="Main/VBox/Buttons/VBox/Opts" to="." method="_on_Opts_pressed"]
[connection signal="pressed" from="Main/VBox/Buttons/VBox/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Find/Find/Cancel" to="." method="_on_Find_returned"]
[connection signal="pressed" from="Make/VBox/Cancel" to="." method="_on_Make_returned"]

[editable path="Find"]
[editable path="Make"]
[editable path="Opts"]
